--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "debug": "export DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.{ts,json,md}\"",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "proxy": "tsc && node --unhandled-rejections=strict ./dist/cors-anywhere.js"
   },
   "dependencies": {
     "axios": "^0.21.4",
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
     "debug": "^4.3.2",
     "express": "^4.17.1",
     "express-winston": "^4.2.0",
